--- a/playbook/roles/clickhouse-role/handlers/main.yml
+++ b/playbook/roles/clickhouse-role/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for clickhouse-role
+- name: Start clickhouse service
+  become: true
+  ansible.builtin.service:
+    name: clickhouse-server
+    state: restarted
