--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,79 +1,43 @@
 ---
 - name: Install Clickhouse
   hosts: clickhouse
-  handlers:
-    - name: Start clickhouse service
-      become: true
-      ansible.builtin.service:
-        name: clickhouse-server
-        state: restarted
-  tasks:
-    - name: Download Clickhouse
-      block:
-        - name: Get clickhouse distrib
-          ansible.builtin.get_url:
-            url: "{{ repo_click }}/clickhouse-client/clickhouse-client_{{ clickhouse_version }}_amd64.deb"
-            dest: "./clickhouse-client_{{ clickhouse_version }}_amd64.deb"
-            mode: "0755"
-        - name: Get clickhouse distrib
-          ansible.builtin.get_url:
-            url: "{{ repo_click }}/clickhouse-common-static/clickhouse-common-static_{{ clickhouse_version }}_amd64.deb"
-            dest: "./clickhouse-common-static_{{ clickhouse_version }}_amd64.deb"
-            mode: "0755"
-        - name: Get clickhouse distrib
-          ansible.builtin.get_url:
-            url: "{{ repo_click }}/clickhouse-server/clickhouse-server_{{ clickhouse_version }}_amd64.deb"
-            dest: "./clickhouse-server_{{ clickhouse_version }}_amd64.deb"
-            mode: "0755"
-    - name: Install clickhouse packages
-      ansible.builtin.apt:
-        deb: "{{ item }}"
-      with_items:
-        - clickhouse-common-static_{{ clickhouse_version }}_amd64.deb
-        - clickhouse-client_{{ clickhouse_version }}_amd64.deb
-        - clickhouse-server_{{ clickhouse_version }}_amd64.deb
-      become: true
-      notify: Start clickhouse service
-    - name: Flush handlers
-      ansible.builtin.meta: flush_handlers
-    - name: Wait Service
-      ansible.builtin.service:
-        name: clickhouse-server
-        state: started
-      register: expected_service
-      until: expected_service.status.ActiveState == "active"
-      retries: 10
-      delay: 3
-    - name: Create database
-      ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
-      register: create_db
-      failed_when: create_db.rc != 0 and create_db.rc != 82
-      changed_when: create_db.rc == 0
+  roles:
+    - role: clickhouse-role
 - name: Install Vector
   hosts: vector
+  roles:
+    - role: vector-role
+- name: Install Lighthouse
+  hosts: lighthouse
+
   handlers:
-    - name: Start Vector service
+    - name: Start nginx service
       become: true
       ansible.builtin.service:
-        name: vector
+        name: nginx
         state: restarted
-  tasks:
-    - name: Configure and Install Vector
-      block:
-        - name: Get Vector distrib
-          ansible.builtin.get_url:
-            url: "https://packages.timber.io/vector/{{ vector_release }}/vector_{{ vector_version }}_amd64.deb"
-            dest: "./vector_{{ vector_version }}_amd64.deb"
-            mode: "0755"
-        - name: Install Vector packages
-          become: true
-          ansible.builtin.apt:
-            deb: vector_{{ vector_version }}_amd64.deb
-          notify: Start Vector service
-        - name: Copy config
-          become: true
-          ansible.builtin.template:
-            src: "{{ vector_template }}"
-            dest: "{{ vector_config_file }}"
-            mode: "0644"
-          notify: Start Vector service
+  pre_tasks:
+    - name: Update Repository cache
+      ansible.builtin.apt:
+        update_cache: true
+    - name: Install Nginx
+      become: true
+      ansible.builtin.apt:
+        name: nginx
+        state: present
+      notify: Start nginx service
+    - name: Create Nginx config
+      become: true
+      ansible.builtin.template:
+        src: nginx.j2
+        dest: /etc/nginx/nginx.conf
+        mode: "0644"
+      notify: Start nginx service
+
+  roles:
+    - role: lighthouse-role
+
+  # post_tasks:
+  #   - name: Show connect URL lighthouse
+  #     ansible.builtin.debug:
+  #       msg: "http://{{ ansible_host }}/#http://{{ hostvars['clickhouse-01'].ansible_host }}:8123/?user={{ clickhouse_user }}"
